[package]
name = "staged-mrsc-rust"
version = "0.1.0"
edition = "2021"
authors = ["Sergei Romanenko <sergei.romanenko@supercompilers.ru>"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
iter-comprehensions = "0.5.0"
lazy-st = "0.2.2"
